AyaFreelance 1.0.6, 2017-10-27
------------------------
- add animations

AyaFreelance 1.0.4, 2017-06-22
------------------------
- update FontAwesome license info
- remove languages folder
- remove Theme URL

AyaFreelance 1.0.3, 2017-05-22
------------------------
- add dd and dt style
- add paragraph margin
- update link colors
- fix issue with comments small font size
- hide edit links for print style
- fix issue with calendar next link font size


AyaFreelance 1.0.2, 2017-05-20
------------------------
- remove FontAseme css added into style.css
- add style for print
- fix style font display issues with Calendar widget

AyaFreelance 1.0.1, 2017-04-23
------------------------
- fix issues with data escaping
- update 3rd party licenses in readme.txt file
- remove unused @since and @author tags
- other small bug fixes

AyaFreelance 1.0.0, 2017-04-16
------------------------
- Initial release