@@ -1,3 +1,8 @@
+AyaFreelance 1.0.7, 2017-12-20
+------------------------
+- improve animation effects
+- add footer menu
+
 AyaFreelance 1.0.6, 2017-10-27
 ------------------------
 - add animations
